--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@huggingface/transformers": "^3.4.1",
+    "@xenova/transformers": "2.17.1",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -23,6 +23,7 @@
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "rss-parser": "^3.13.0",
-    "sentiment": "^5.0.2"
+    "sentiment": "^5.0.2",
+    "sharp": "^0.32.6"
   }
 }
